# document-scanner

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_tests.sh
data/ground_truth/: img_10_gt.txt  img_1_gt.txt  img_2_gt.txt  img_3_gt.txt  img_4_gt.txt  img_5_gt.txt  img_6_gt.txt  img_7_gt.txt  img_8_gt.txt  img_9_gt.txt
include/: contour_analysis.h  document_detector.h  document_transform.h  evaluation.h  file_io.h  geometry_utils.h  image_preprocessing.h  polygon_interactor.h  visualization.h
scripts/: build.sh  docscan.cpp
src/: .gitignore  DocumentScanner.h  contour_analysis.cpp  document_detector.cpp  document_transform.cpp  evaluation.cpp  file_io.cpp  geometry_utils.cpp  image_preprocessing.cpp  main.cpp  polygon_interactor.cpp  visualization.cpp
src/utils/: ContourDetector.h  ImageProcessor.h  PerspectiveTransform.h  ValidationUtils.h
tests/: CMakeLists.txt
